--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "hardhat": "^2.8.4",
     "http-errors": "~1.6.3",
@@ -19,7 +20,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
     "swagger-ui-express": "^4.3.0",
-    "web3": "^1.7.0" 
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
